@@ -1,0 +1,6 @@
+package github.pitbox46.horsecombatcontrols;
+
+public interface CombatModeAccessor {
+    boolean inCombatMode();
+    void setCombatMode(boolean flag);
+}
